:bug: Bugfix and loop cycle size input

--- a/main/ESP32_main_sketch/data/index.html
+++ b/main/ESP32_main_sketch/data/index.html
@@ -99,7 +99,7 @@
                     </td>
                     <td>
                       <label for="display_sun_center">Sun approximation step: </label><label id="sun_center_label">0</label> <input type="range" min="0" max="511" value="0" class="slider" id="sun_center_slider" oninput="main_image_drawing_handler()" disabled>
-                      <label for="loop_sun_center_animation" id="sun_center_loop_span_label" class="disabled"> Loop:</label> <input type="checkbox" id="loop_sun_center_animation" name="loop_sun_center_animation" onchange="loop_sun_center_animation()" disabled>
+                      <label for="loop_sun_center_animation" id="sun_center_loop_span_label" class="disabled"> Loop:</label> <input type="checkbox" id="loop_sun_center_animation" name="loop_sun_center_animation" onchange="loop_sun_center_animation()" disabled> <input id="animation_loop_cycle" value="128" style="width: 50px;" disabled></input>
                     </td>
                   </tr>
                 </table>
