:sparkles: Example sensor images and calc data

--- a/main/ESP32_main_sketch/data/index.html
+++ b/main/ESP32_main_sketch/data/index.html
@@ -115,6 +115,10 @@
                 <button id="frame_button" onclick="call_ajax_once()">Frame</button>
                 <button id="loop_button" onclick="toggle_loop()">Loop</button>
                 <button id="start_button" onclick="toggle_demo()">Start</button>
+                <br>
+                <button onclick="default_center()">Default</button>
+                <button onclick="edge_right()">Edge 1</button>
+                <button onclick="edge_wrong()">Edge 2</button>
                 <table style="width: auto; text-align: left;">
                   <colgroup>
                     <col span="1" style="width: 15%;">
@@ -165,5 +169,6 @@
     <script type="text/javascript" src="reflection_simulation.js"></script>
     <script type="text/javascript" src="optical_sensor.js"></script>
     <script type="text/javascript" src="motors_control.js"></script>
+    <script type="text/javascript" src="example_data_values.js"></script>
   </body>
 </html>
