--- a/main/ESP32_main_sketch/data/index.html
+++ b/main/ESP32_main_sketch/data/index.html
@@ -172,7 +172,7 @@
       </div>
     </div>
     
-    <canvas id="canvas_image" width="1300" height="600" style="border:1px solid #ccc;">
+    <canvas id="canvas_temperature_chart" width="1300" height="600" style="border:1px solid #ccc;">
     Your browser does not support the canvas element.
     </canvas>
     
