--- a/main/ESP32_main_sketch/data/index.html
+++ b/main/ESP32_main_sketch/data/index.html
@@ -114,7 +114,7 @@
               <td style="width: 50%; height: auto">
                 <button id="frame_button" onclick="call_ajax_once()">Frame</button>
                 <button id="loop_button" onclick="toggle_loop()">Loop</button>
-                <button id="start_button" onclick="toggle_demo()">Start</button>
+                <!--<button id="start_button" onclick="toggle_demo()">Start</button>-->
                 <br>
                 <button onclick="default_center()">Default</button>
                 <button onclick="edge_right()">Edge 1</button>
