:lipstick: Changed demo motor parameters

--- a/main/ESP32_main_sketch/data/index.html
+++ b/main/ESP32_main_sketch/data/index.html
@@ -88,13 +88,13 @@
                 <br>
                 &nbsp;
                 <br>
-                <button id="toggle_enable_button" onclick="toggle_enable()" class="button_red"><div class="en"><label class="disable-motors">Disable Motors</label><label class="enable-motors">Enable Motors</label></div>  <div class="it"><label class="disable-motors">Disabilita Motori</label><label class="enable-motors">Abilita Motori</label></div></button>
+                <button id="toggle_enable_button" onclick="toggle_enable()"><div class="en"><label class="disable-motors">Disable Motors</label><label class="enable-motors">Enable Motors</label></div>  <div class="it"><label class="disable-motors">Disabilita Motori</label><label class="enable-motors">Abilita Motori</label></div></button>
                 <br>
                 &nbsp;
                 <br>
-                Steps: <label id="steps_label">600</label> <input type="range" min="1" max="4000" value="600" class="slider" id="steps_slider">
-                <label class="en">Speed: </label><label class="it">Velocità: </label><label id="speed_label">300</label> <input type="range" min="1" max="1000" value="300" class="slider" id="speed_slider">
-                <label class="en">Acceleration: </label><label class="it">Accelerazione: </label><label id="acceleration_label">300</label> <input type="range" min="1" max="1000" value="300" class="slider" id="acceleration_slider">
+                Steps: <label id="steps_label">600</label> <input type="range" min="1" max="5000" value="600" class="slider" id="steps_slider">
+                <label class="en">Speed: </label><label class="it">Velocità: </label><label id="speed_label">300</label> <input type="range" min="1" max="3000" value="300" class="slider" id="speed_slider">
+                <label class="en">Acceleration: </label><label class="it">Accelerazione: </label><label id="acceleration_label">300</label> <input type="range" min="1" max="3000" value="300" class="slider" id="acceleration_slider">
               </td>
             </tr>
           </tbody>
